# notifd

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
nix/: default.nix  shell.nix
src/notifd/: __init__.py  notifd.py  notifdctl.py
